--- a/SDStudentPortal/SDStudentPortal/Views/Uploads/Index.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Uploads/Index.cshtml
@@ -19,10 +19,7 @@
     
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.User.Email)
-        </th>
+    <tr>       
         <th>
             @Html.DisplayNameFor(model => model.Title)
         </th>
@@ -41,14 +38,15 @@
         <th>
             @Html.DisplayNameFor(model => model.FileType)
         </th>
+        <th>
+            @Html.DisplayNameFor(model=>model.project.Title)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.User.Email)
-        </td>
+       
         <td>
             @Html.DisplayFor(modelItem => item.Title)
         </td>
@@ -67,6 +65,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FileType)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem=>item.ProjectID)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.UploadsID }) |
