--- a/SDStudentPortal/SDStudentPortal/Views/Uploads/Create.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Uploads/Create.cshtml
@@ -22,6 +22,14 @@
                 @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
             </div>
         </div>*@
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.project.Title, "Select Project", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.ProjectID, ViewBag.ProjectList as SelectList, new { @class = "form-control"})
+                
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
