--- a/SDStudentPortal/SDStudentPortal/Views/Uploads/Edit.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Uploads/Edit.cshtml
@@ -26,6 +26,14 @@
         </div>*@
 
         <div class="form-group">
+            @Html.LabelFor(model => model.project.Title, "Select Project", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.ProjectID, ViewBag.ProjectList as SelectList, "Select Project", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ProjectID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
