Add webgrid style

--- a/SDStudentPortal/SDStudentPortal/Content/Custom.css
+++ b/SDStudentPortal/SDStudentPortal/Content/Custom.css
@@ -423,3 +423,39 @@ a{
     padding: 5px 10px 5px 10px;
     border-radius: 27px;
 }
+
+/*Webgrid Style*/
+  .webGrid {
+        margin: 4px;
+        border-collapse: collapse;
+        width: 500px;
+        background-color: #B4CFC3;
+    }
+
+    .header {
+        background-color: #C1D4E6;
+        font-weight: bold;
+        color: #FFF;
+    }
+
+    .webGrid th, .webGrid td {
+        border: 1px solid #C0C0C0;
+        padding: 5px;
+    }
+
+    .alt {
+        background-color: #E4E9F5;
+        color: #000;
+    }
+
+    .gridHead a:hover {
+        text-decoration: underline;
+    }
+
+    .description {
+        width: auto;
+    }
+
+    .select {
+        background-color: #71857C;
+    }
