minor css changes. blogs now in dropdown on the nav bar

--- a/SDStudentPortal/SDStudentPortal/Content/StyleSheet1.css
+++ b/SDStudentPortal/SDStudentPortal/Content/StyleSheet1.css
@@ -79,3 +79,7 @@
 .btn-pref .btn {
     -webkit-border-radius:0 !important;
 }
+
+.show-on-hover:hover > ul.dropdown-menu {
+    display: block;    
+}
