--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -28,22 +28,31 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
+                @Html.ActionLink("Robertson Software Development Student Portal", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            </div><br/>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Search Users","SearchUsers","UserModels")</li>
+                    <li>@Html.ActionLink("Search Users", "SearchUsers", "UserModels")</li>
                     <li>@Html.ActionLink("User Info", "Edit", "UserModels")</li>
-                    <li>@Html.ActionLink("Uploads", "Index", "Uploads")</li>
-                    <li>@Html.ActionLink("Project","Index","Projects")</li>
+                    <li>@Html.ActionLink("Project", "Index", "Projects")</li>
+                </ul>
+                    <div class="btn-group show-on-hover">
+                        <div role="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                            Blogs <span class="caret"></span>
+                        </div>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="~/Views/Blog/Index.cshtml">Blogs</a></li>
+                            <li><a href="~/Views/Blog/BlogSearchResult.cshtml">Search Blogs</a></li>
+                        </ul>
+                    </div>
+                <ul  class="nav navbar-nav">
                     <li>@Html.ActionLink("About Us", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact Us", "Contact", "Home")</li>                
+                    <li>@Html.ActionLink("Contact Us", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
-    </div>
+    </div><br/><br/>
     <div class="container body-content">
         @RenderBody()
         <hr />
