--- a/SDStudentPortal/SDStudentPortal/Views/Uploads/Edit.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Uploads/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm("Edit", "Uploads", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Edit", "Uploads", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.UploadsID)
-
+                
         @*<div class="form-group">
             @Html.LabelFor(model => model.UserId, "UserId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -100,7 +100,7 @@
     </div>
 }
 
-<div>
+<div>   
     @Html.ActionLink("Back to List", "Index")
 </div>
 
