--- a/SDStudentPortal/SDStudentPortal/Views/Projects/Details.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Projects/Details.cshtml
@@ -38,10 +38,10 @@
             alternatingRowStyle: "alt",
             selectedRowStyle: "select",
             columns: grid.Columns(
-                grid.Column("UploadsID", "ID"),
-                grid.Column("Title", "Title"),
-                grid.Column("UploadFileUrl", "File", format: @<text><img src="@item.UploadFileUrl" /></text>)@*,
-                grid.Column("", "Actions", format:@<text> @Html.ActionLink("Edit", "Edit", "Uploads", new { id = item.UploadsID }, null) @Html.ActionLink("Delete", "Delete", "Uploads", new { id = item.UploadsID }, null)</text>)*@
+                     grid.Column("File#", format: item => item.WebGrid.Rows.IndexOf(item) + 1 + Math.Round(Convert.ToDouble(grid.TotalRowCount / grid.PageCount) / grid.RowsPerPage) * grid.RowsPerPage * grid.PageIndex),
+                     grid.Column("Title", "Title"),
+                     grid.Column("Description", "Description"),
+                     grid.Column("UploadFileUrl", "File", format: @<text><img src="@item.UploadFileUrl" /></text>)
             ))
         </dd>
     </dl>
