--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -22,22 +22,29 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div class="navbar-header">
+            <div class="navbar-header pull-left">
+                <a class="navbar-brand">
+                    <img src="~/Images/robertsoncollege-logo.png" />
+                </a>
+            </div>
+            <div class=".header ul.nav-utility">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Robertson Software Development Student Portal", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @*<a class="navbar-brand">*@
+                    @Html.ActionLink("Robertson Software Development Student Portal", "Index", "Home", new { @class = "headerTitle" })
+                @*</a>*@
             </div><br/>
-            <div class="navbar-collapse collapse">
+            <div class="nav navbar-nav navbar-right">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Search Users", "SearchUsers", "UserModels")</li>
                     <li>@Html.ActionLink("User Info", "Edit", "UserModels")</li>
-                    <li>@Html.ActionLink("Project", "Index", "Projects")</li>
+                    <li>@Html.ActionLink("Projects", "Index", "Projects")</li>
                 </ul>
                     <div class="btn-group show-on-hover">
-                        <div role="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                        <div role="button" class="navbar-link dropdown-toggle verticalAlign" data-toggle="dropdown">
                             Blogs <span class="caret"></span>
                         </div>
                         <ul class="dropdown-menu" role="menu">
