--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @*<a class="navbar-brand">*@
-                    @Html.ActionLink("Robertson Software Development Student Portal", "Index", "Home", new { @class = "headerTitle" })
+                    @Html.ActionLink("Software Development Student Portal", "Index", "Home", new { @class = "headerTitle" })
                 @*</a>*@
             </div><br/>
             <div class="nav navbar-nav navbar-right">
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div><br/><br/>
-    <div class="container body-content">
+    <div class="container body-content pushContent">
         @RenderBody()
         <hr />
         <footer>
