Add privacy enum to blog

--- a/SDStudentPortal/SDStudentPortal/Views/Blog/Delete.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Blog/Delete.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Public)
+            @Html.DisplayNameFor(model => model.BlogPrivacySetting)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Public)
+            @Html.DisplayFor(model => model.BlogPrivacySetting)
         </dd>
     </dl>
 
