--- a/SDStudentPortal/SDStudentPortal/Views/Blog/Create.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Blog/Create.cshtml
@@ -25,11 +25,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Public, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BlogPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <label>@Html.RadioButtonFor(model => model.Public, "true") YES</label>
-                <label>@Html.RadioButtonFor(model => model.Public, "false") NO</label>
-                @Html.ValidationMessageFor(model => model.BlogCreatedDate, "", new { @class = "text-danger" })
+                @Html.EnumDropDownListFor(model => model.BlogPrivacySetting, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.BlogPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
 
