--- a/SDStudentPortal/SDStudentPortal/Views/StudentProfiles/Details.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/StudentProfiles/Details.cshtml
@@ -9,127 +9,17 @@
 <div>
     <h4>StudentProfile</h4>
     <hr />
-    @*<dl class="dl-horizontal">
+    <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.User.Email)
+            @Html.DisplayNameFor(model => model.User.UserId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.User.Email)
+            @Html.DisplayFor(model => model.User.UserId)
         </dd>
 
-    </dl>*@
-    <hr />
-    <div class="container" id="Profile">
-        <div class="row" id="NameAndBio">
-            <div class="col-lg-3">
-                <dd>
-                    @Html.DisplayFor(model => model.ProfileName)
-                </dd>
-
-                <dd>
-                    <img src="../../@Html.DisplayFor(model => model.ProfilePictureURL)" style="height:150px; width:150px" />
-                </dd>
-            </div>
-            <div class="col-lg-3">
-                <dt>
-                    @Html.DisplayNameFor(model => model.FirstName)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.FirstName)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.LastName)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.LastName)
-                </dd>
-                <dt>
-                    @Html.DisplayNameFor(model => model.ClassNumber)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.ClassNumber)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.ProfileName)
-                </dt>
-
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Gender)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Gender)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Address)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Address)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.PhoneNumber)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.PhoneNumber)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.DateOfBirth)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.DateOfBirth)
-                </dd>
-
-
-            </div>
-            <div class="col-lg-6">
-                <dt>
-                    @Html.DisplayNameFor(model => model.Skills)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Skills)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Certificates)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Certificates)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Memberships)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Memberships)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Experience)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Experience)
-                </dd>
-            </div>
-        </div>
-    </div>
+    </dl>
+</div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.StudentProfileID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
