--- a/SDStudentPortal/SDStudentPortal/Views/StudentProfiles/Index.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/StudentProfiles/Index.cshtml
@@ -1,33 +1,36 @@
-﻿@model IEnumerable<SDStudentPortal.Models.StudentProfile>
-
+﻿@model IEnumerable<SDStudentPortal.Models.UserModel>
+<link href="~/Content/StyleSheet1.css" rel="stylesheet" />
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h1>Students</h1>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.User.Email)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.User.Email)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.StudentProfileID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.StudentProfileID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.StudentProfileID })
-        </td>
-    </tr>
+@foreach (var item in Model)
+{
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="card">
+                    <canvas class="header-bg" width="250" height="70" id="header-blur"></canvas>
+                    <div class="avatar">
+                        <img src="" alt="" />
+                    </div>
+                    <div class="content">
+                        <p>
+                            @item.FirstName @item.LastName <br>
+                            @item.ProfileName
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a a href='@Url.Action("StudentProfile", "UserModels")'>
+        <img src="../../@Html.DisplayFor(modelItem => item.ProfilePictureURL)"/>
+    </a>
 }
 
-</table>
+@*<td>
+        @Html.DisplayFor(modelItem => item.User.Email)
+    </td>*@
