--- a/SDStudentPortal/SDStudentPortal/Content/bootstrap.css
+++ b/SDStudentPortal/SDStudentPortal/Content/bootstrap.css
@@ -760,7 +760,7 @@ pre code {
 }
 
 .container {
-  padding-right: 15px;
+  padding-right: 0px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
@@ -5244,7 +5244,7 @@ a.thumbnail:focus {
 }
 
 .media > .pull-right {
-  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .media-list {
@@ -6218,7 +6218,7 @@ body.modal-open,
 }
 
 .pull-right {
-  float: right !important;
+  float: right;
 }
 
 .pull-left {
