--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+        <div class="container" style="margin-left:15px">
             <div class="navbar-header pull-left">
                 <a class="navbar-brand">
                     <img src="~/Images/robertsoncollege-logo.png" />
@@ -48,8 +48,8 @@
                             Blogs <span class="caret"></span>
                         </div>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="~/Views/Blog/Index.cshtml">Blogs</a></li>
-                            <li><a href="~/Views/Blog/BlogSearchResult.cshtml">Search Blogs</a></li>
+                            <li>@Html.ActionLink("Blogs", "Index", "Blog")</li>
+                            <li>@Html.ActionLink("Search Blogs", "BlogSearchResult", "Blog")</li>
                         </ul>
                     </div>
                 <ul  class="nav navbar-nav">
