--- a/SDStudentPortal/SDStudentPortal/Views/UserModels/SearchUsers.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/UserModels/SearchUsers.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<SDStudentPortal.Models.UserModel>
-<link href="~/Content/StyleSheet1.css" rel="stylesheet" />
+<link href="~/Content/StyleSheet2.css" rel="stylesheet" />
 @{
     ViewBag.Title = "SeachUsers";
 }
@@ -19,32 +19,22 @@
         <div class="col-sm-3">
             @foreach (var item in Model)
             {
-                @*<div style="display:inline-block; padding:4px 7px 2px 4px; text-align:center">
-                    <div class="image">
-                        <a a href='@Url.Action("StudentProfile", "UserModels")'>
-                            <img src="../../@Html.DisplayFor(modelItem => item.ProfilePictureURL)" style="height:250px; width:160px" />
-                        </a>
+                <div class="card hovercard">
+                    <div class="cardheader">
+                        @*<img alt="" class="blur" src="../../@Html.DisplayFor(modelItem => item.ProfilePictureURL)"/>*@
                     </div>
-                    <div class="name">
-                        @item.FirstName
-                        @item.LastName
-                    </div>
-                    <div>
-                        @item.ProfileName
-                    </div>
-                </div>*@
-                <div class="card">
-                    <canvas class="header-bg" width="250" height="70" id="header-blur"></canvas>
                     <div class="avatar">
-                        <a a href='@Url.Action("StudentProfile", "UserModels")'>
-                            <img src="../../@Html.DisplayFor(modelItem => item.ProfilePictureURL)" />
+                        <a a href='@Url.Action("Details", "StudentProfiles")'>
+                            <img alt="" src="../../@Html.DisplayFor(modelItem => item.ProfilePictureURL)" />
                         </a>
                     </div>
-                    <div class="content">
-                        <p>
-                            @item.FirstName @item.LastName <br>
-                            @item.ProfileName
-                        </p>
+                    <div class="info">
+                        <div class="title">
+                            <a target="_blank" href='@Url.Action("Details", "StudentProfiles")'>@item.FirstName @item.LastName</a>
+                        </div>
+                    </div>
+                    <div class="bottom">
+                        @item.ProfileName
                     </div>
                 </div>
             }
