--- a/SDStudentPortal/SDStudentPortal/Views/UserModels/Edit.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/UserModels/Edit.cshtml
@@ -19,7 +19,7 @@
                     <!-- http://lorempixel.com/850/280/people/9/ -->
                 </div>
                 <div class="useravatar">
-                    <img alt="" src="~/Images/default-profile-large.png" />
+                    <img alt="" src="../../@Html.DisplayFor(modelItem => modelItem.ProfilePictureURL)" />
                 </div>
                 <div class="card-info">
                     <span class="card-title">User Information</span>
