--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_LoginPartial.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_LoginPartial.cshtml
@@ -18,7 +18,7 @@
 
             <ul class="nav navbar-nav navbar-right">
 
-                <li>@Html.ActionLink("Hello " + User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
+                <li>@Html.ActionLink("Hello " + User.Identity.GetUserName(), "Edit", "UserModels"))</li>
                               
                 <li>
                     <button type="button" class="btn btn-danger btn-lg btn3d" onclick="javascript:document.getElementById('logoutForm').submit()"><span class="glyphicon glyphicon-off"></span>Log Off</button>
